--- a/FacturacionFerreteriaRepositorioBDII/src/Camara/Camara.form
+++ b/FacturacionFerreteriaRepositorioBDII/src/Camara/Camara.form
@@ -59,7 +59,7 @@
                   <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
                   <Component id="jComboBox1" min="-2" pref="243" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jButton4" min="-2" pref="107" max="-2" attributes="0"/>
+                  <Component id="jButton4" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
