--- a/FacturacionFerreteriaRepositorioBDII/src/ClienteNatural/ClienteNaturalInternal.form
+++ b/FacturacionFerreteriaRepositorioBDII/src/ClienteNatural/ClienteNaturalInternal.form
@@ -329,6 +329,7 @@
                   <Image iconType="3" name="/Iconos2/Cancel.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Cancelar"/>
+                <Property name="borderPainted" type="boolean" value="false"/>
                 <Property name="rolloverIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/Iconos2/Cancel 32x32.png"/>
                 </Property>
