--- a/FacturacionFerreteriaRepositorioBDII/src/RepresentanteJuridico/RepresentanteInternal.form
+++ b/FacturacionFerreteriaRepositorioBDII/src/RepresentanteJuridico/RepresentanteInternal.form
@@ -179,7 +179,7 @@
                           </Group>
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="jScrollPane1" pref="75" max="32767" attributes="0"/>
+                              <Component id="jScrollPane1" pref="78" max="32767" attributes="0"/>
                               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="btnGuadar" alignment="1" min="-2" pref="46" max="-2" attributes="0"/>
@@ -359,6 +359,12 @@
                   <Image iconType="3" name="/Iconos2/Cancel.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Cancelar"/>
+                <Property name="rolloverIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/Iconos2/Cancel 32x32.png"/>
+                </Property>
+                <Property name="rolloverSelectedIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/Iconos2/Cancel 32x32.png"/>
+                </Property>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarActionPerformed"/>
@@ -370,6 +376,12 @@
                   <Image iconType="3" name="/Iconos2/Save 16x16.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Guardar"/>
+                <Property name="rolloverIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/Iconos2/Save 24 x24.png"/>
+                </Property>
+                <Property name="rolloverSelectedIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/Iconos2/Save 24 x24.png"/>
+                </Property>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGuadarActionPerformed"/>
@@ -478,7 +490,7 @@
                           </Group>
                           <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="CbxMostrar" pref="155" max="32767" attributes="0"/>
+                              <Component id="CbxMostrar" pref="0" max="32767" attributes="0"/>
                               <Component id="CbxBuscar" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
