--- a/FacturacionFerreteriaRepositorioBDII/src/ClienteJuridico/ClienteJuridicoInternal.form
+++ b/FacturacionFerreteriaRepositorioBDII/src/ClienteJuridico/ClienteJuridicoInternal.form
@@ -164,6 +164,9 @@
                     <Property name="columns" type="int" value="20"/>
                     <Property name="rows" type="int" value="5"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="DireccionKeyTyped"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
@@ -230,6 +233,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="Correo">
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CorreoKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="Telefono">
               <Events>
@@ -275,6 +281,9 @@
                   <Format format="U#############" subtype="-1" type="5"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="RUCKeyTyped"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
